--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "ENABLE_EXTERNAL_LOG", "true")
+
+        buildConfigField("boolean", "ENABLE_EXPLORE_IN_NAVIGATION", "true")
+        buildConfigField("boolean", "ENABLE_SIGNIN_IN_NAVIGATION", "true")
+        buildConfigField("boolean", "ENABLE_SETTINGS_IN_NAVIGATION", "true")
+        buildConfigField("String", "PREF_ATTENDEE_AT_VENUE", "\"pref_attendee_at_venue_${conf_version}\"")
     }
     buildTypes {
         release {
