--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yalin.googleio2016">
 
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoogleIO">
-        <activity android:name=".explore.ExploreIOActivity">
+        <activity
+            android:name=".explore.ExploreIOActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GoogleIO">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +28,27 @@
             android:name=".welcome.WelcomeActivity"
             android:exported="false"
             android:theme="@style/Theme.GoogleIO.Welcome" />
+
+        <activity
+            android:name=".debug.DebugActivity"
+            android:exported="false"
+            android:label="@string/title_activity_debug_test_runner"
+            android:parentActivityName=".explore.ExploreIOActivity"
+            android:theme="@style/Theme.GoogleIO">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".explore.ExploreIOActivity" />
+
+        </activity>
+
+        <service android:name=".sync.account.AuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
     </application>
 
 </manifest>
