--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ appVersionName = 1.0
 
 android_support_lib_version = 24.2.0
 google_play_services_client_library_version = 9.8.0
+
+conf_version = io2016
