--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,21 @@ android {
         buildConfigField("boolean", "ENABLE_SETTINGS_IN_NAVIGATION", "true")
         buildConfigField("String", "PREF_ATTENDEE_AT_VENUE", "\"pref_attendee_at_venue_${conf_version}\"")
         buildConfigField("String", "PREF_DATA_BOOTSTRAP_DONE", "\"pref_bootstrap_done_${conf_version}\"")
+        buildConfigField("String", "WIFI_SSID", "\"${wifi_ssid}\"")
+        buildConfigField("String", "WIFI_PASSPHRASE", "\"${wifi_passphrase}\"")
+        buildConfigField("String", "CONFERENCE_DAY1_START", "\"${conference_day1_start}\"")
+        buildConfigField("String", "CONFERENCE_DAY1_END", "\"${conference_day1_end}\"")
+        buildConfigField("String", "CONFERENCE_DAY2_START", "\"${conference_day2_start}\"")
+        buildConfigField("String", "CONFERENCE_DAY2_END", "\"${conference_day2_end}\"")
+        buildConfigField("String", "CONFERENCE_DAY3_START", "\"${conference_day3_start}\"")
+        buildConfigField("String", "CONFERENCE_DAY3_END", "\"${conference_day3_end}\"")
+        buildConfigField("String", "INPERSON_TIMEZONE", "\"${inperson_timezone}\"")
+
+        buildConfigField("String", "BOOTSTRAP_DATA_TIMESTAMP", "\"${bootstrap_data_timestamp}\"")
+
+        buildConfigField("String", "PREF_CONF_MESSAGES_ENABLED", "\"pref_conf_messages_enabled_${conf_version}\"")
+        buildConfigField("String", "PREF_SESSION_REMINDERS_ENABLED", "\"pref_session_reminders_enabled_${conf_version}\"")
+        buildConfigField("String", "PREF_SESSION_FEEDBACK_REMINDERS_ENABLED", "\"pref_session_feedback_reminders_enabled_${conf_version}\"")
     }
     buildTypes {
         release {
@@ -42,6 +57,8 @@ dependencies {
     compile "com.android.support:preference-v7:${android_support_lib_version}"
 
     compile 'com.google.code.gson:gson:2.4'
+
+    compile 'com.google.guava:guava:18.0'
 
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
