--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,18 @@ android_support_lib_version = 24.2.0
 google_play_services_client_library_version = 9.8.0
 
 conf_version = io2016
+
+# Access Credentials for Wifi at Moscone.
+wifi_ssid = IO2016
+wifi_passphrase = iofestival
+
+bootstrap_data_timestamp = Sun, 10 Apr 2016 00:01:03 GMT
+
+conference_day1_start = 2016-05-18T07:00:00-07:00
+conference_day1_end = 2016-05-18T22:00:00-07:00
+conference_day2_start = 2016-05-19T08:00:00-07:00
+conference_day2_end = 2016-05-19T22:00:00-07:00
+conference_day3_start = 2016-05-20T08:00:00-07:00
+conference_day3_end = 2016-05-20T16:00:00-07:00
+
+inperson_timezone = America/Los_Angeles
