--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ appVersionName = 1.0
 android_support_lib_version = 24.2.0
 google_play_services_client_library_version = 9.8.0
 
+## TODO: Supply YouTube API key and sender ID for your project
+youtube_api_key =
+
 conf_version = io2016
 
 # Access Credentials for Wifi at Moscone.
