--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "ENABLE_EXTERNAL_LOG", "true")
+        buildConfigField("String", "YOUTUBE_API_KEY", "\"${youtube_api_key}\"")
 
         buildConfigField("boolean", "ENABLE_EXPLORE_IN_NAVIGATION", "true")
         buildConfigField("boolean", "ENABLE_SIGNIN_IN_NAVIGATION", "true")
