--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
     compile 'com.google.code.gson:gson:2.4'
 
+    // Glide library, used to handle asynchronous loading and caching of images.
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    
     compile 'com.google.guava:guava:18.0'
 
     androidTestCompile 'com.android.support.test:runner:0.5'
