--- a/gradle.properties
+++ b/gradle.properties
@@ -35,3 +35,5 @@ conference_day3_start = 2016-05-20T08:00:00-07:00
 conference_day3_end = 2016-05-20T16:00:00-07:00
 
 inperson_timezone = America/Los_Angeles
+
+production_website_host_name = events.google.com
