--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,71 @@
         </activity>
 
         <activity
+            android:name=".MyScheduleActivity"
+            android:exported="true"
+            android:label="@string/title_my_schedule"
+            android:launchMode="singleTop"
+            android:parentActivityName=".explore.ExploreIOActivity"
+            android:theme="@style/Theme.GoogleIO.MySchedule">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".explore.ExploreIOActivity" />
+
+            <intent-filter
+                android:label="@string/app_name"
+                android:priority="200">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="@string/website_host_name"
+                    android:pathPattern="/io2016/schedule/*"
+                    android:scheme="http" />
+                <data
+                    android:host="@string/website_host_name"
+                    android:pathPattern="/io2016/schedule/*"
+                    android:scheme="https" />
+
+                <!-- This catches /io2016/schedule but not /io2016/schedule//////
+                    See above for testing notes. -->
+                <data
+                    android:host="@string/website_host_name"
+                    android:path="/io2016/schedule"
+                    android:scheme="http" />
+                <data
+                    android:host="@string/website_host_name"
+                    android:path="/io2016/schedule"
+                    android:scheme="https" />
+
+                <!-- Replicating the above data elements for www.google.com -->
+                <!-- This catches /events/io/schedule//// but not /events/io/schedule
+                     See above for tes ting notes. -->
+                <data
+                    android:host="www.google.com"
+                    android:pathPattern="/events/io/schedule/*"
+                    android:scheme="http" />
+                <data
+                    android:host="www.google.com"
+                    android:pathPattern="/io2016/schedule/*"
+                    android:scheme="https" />
+
+                <!-- This catches /events/io/schedule but not /events/io/schedule//////
+                     See above for testing notes. -->
+                <data
+                    android:host="www.google.com"
+                    android:path="/events/io/schedule"
+                    android:scheme="http" />
+                <data
+                    android:host="www.google.com"
+                    android:path="/events/io/schedule"
+                    android:scheme="https" />
+            </intent-filter>
+
+        </activity>
+
+        <activity
             android:name=".explore.ExploreSessionsActivity"
             android:exported="true"
             android:label="@string/title_explore"
