add my schedule

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,8 @@ wifi_passphrase = iofestival
 
 bootstrap_data_timestamp = Sun, 10 Apr 2016 00:01:03 GMT
 
+preconference_day_start = 2016-05-17T07:00:00-07:00
+preconference_day_end = 2016-05-17T19:00:00-07:00
 conference_day1_start = 2016-05-18T07:00:00-07:00
 conference_day1_end = 2016-05-18T22:00:00-07:00
 conference_day2_start = 2016-05-19T08:00:00-07:00
