--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,17 @@ appVersionName = 1.0
 android_support_lib_version = 24.2.0
 google_play_services_client_library_version = 9.8.0
 
+###############################################################################
+# Prod/Staging/Test/Dev Environment Variables.
+###############################################################################
+# API manifest URLs. These URLs provide the data files to load to download data for the app.
+# When data needs to change the underlying data file is published as a new revision and the manifest
+# is updated with the new file name.
+staging_api_manifest_endpoint = https://storage.googleapis.com/io2016-bucket-dev/manifest_v1.json
+production_api_manifest_endpoint = http://storage.googleapis.com/io2016-festivus/manifest_v1.json
+
+production_website_host_name = events.google.com
+
 ## TODO: Supply YouTube API key and sender ID for your project
 youtube_api_key =
 
@@ -38,4 +49,6 @@ conference_day3_end = 2016-05-20T16:00:00-07:00
 
 inperson_timezone = America/Los_Angeles
 
-production_website_host_name = events.google.com
+# Feedback API
+## TODO: Supply Feedback API endpoint and implement FeedbackApiHelper
+feedback_api_endpoint = UNDEFINED
